# AgentBeats-JarvisVLA

./: .gitignore  AGENT_LOGIC.md  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test-and-publish.yml
amber/: amber-manifest.json5
docs/: architecture.md  purple-agent-logic-analysis.md
examples/: rollout_mcu_benchmark.py  run_server.py  run_standalone.py
jarvisvla/evaluate/: agent_wrapper.py  evaluate.py
jarvisvla/evaluate/env_helper/: craft_agent.py  smelt_agent.py
outputs/2026-03-19_07-10-32/: benchmark_results.json
outputs/2026-03-19_07-10-32/combat/combat_enderman/: loss.json  raw_action.jsonl  task_config.json
outputs/2026-03-19_07-10-32/combat/combat_skeletons/: loss.json  raw_action.jsonl  task_config.json
outputs/2026-03-19_14-58-30/: benchmark_results.json
scripts/: rollout_mcu.sh  run_benchmark.sh
scripts/docker/: entrypoint.sh
scripts/evaluate/: rollout-kill.sh
scripts/inference/: serve_vllm.sh
src/: __init__.py
src/action/: __init__.py  action_space.py  converter.py
src/agent/: __init__.py  agent.py  fallback_policy.py  instruction_runner.py  primitive_scripts.py  prompt_template.py  sequence_router.py  sequence_templates.py  vla_runner.py  vlm_runner.py  vlm_sequence_selector.py
src/executor/: __init__.py  fsm_executor.py  vlm_checker.py
src/planner/: __init__.py  instruction_registry.py  llm_planner.py  plan_format.py  planner.py  prompt_template.py  spec_format.py  validator.py
src/primitives/: __init__.py  atomic.py  guards.py  micro.py  perceptual.py
src/protocol/: __init__.py  models.py
src/server/: __init__.py  app.py  executor.py  session_manager.py
src/skills/: __init__.py  executor.py  library.py  prompt_template.py  vlm_skill_runner.py
tests/: conftest.py  test_executor.py  test_instruction_registry.py  test_planner_retry_rewrite.py  test_planning_horizon.py  test_primitives.py  test_purple_agent_smoke.py  test_spec_format.py  test_validator.py
(+46 files in other folders)
