[project]
name = "jarvisvla"
version = "1.0"
description = "research project"
authors = [
    {name = "CraftJarvis Team"}
]
readme = "README.md"
license = {text = "MIT License"}
keywords = [
    "Open-ended Learning",
    "Large Language Models",
    "Machine Learning",
]
requires-python = ">=3.11,<3.12"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Environment :: Console",
    "Programming Language :: Python :: 3.9",
]

dependencies = [
    # A2A server stack (recommendation: http-server extra)
    "a2a-sdk>=0.3.5",
    "google-adk>=1.14.1",
    "google-genai>=1.36.0",
    "litellm>=1.0.0",
    "nest-asyncio>=1.6.0",
    "psutil>=7.2.1",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
    "psutil>=7.2.1",
    "pyglet==1.4.0b1",
    # Jarvis VLA stack
    "accelerate==1.2.1",
    "attrs==24.3.0",
    "av==13.1.0",
    "cuda-python>=12.0.0",
    "datasets>=2.14.0,<3.0.0",
    "deepspeed==0.16.3",
    "huggingface-hub==0.28.1",
    "hydra-core>=1.3.0",
    "numpy==1.26.4",
    "nvitop>=1.0.0",
    "omegaconf>=2.2.0",
    "openai>=1.0.0",
    "opencv-python>=4.8.0",
    "opencv-python-headless>=4.8.0",
    "peft==0.14.0",
    "pillow==10.4.0",
    "qwen-vl-utils>=0.0.8",
    "ray>=2.0.0",
    "rich>=13.0.0",
    "sentencepiece==0.2.0",
    "tokenizers==0.21.0",
    "tqdm>=4.65.0",
    "transformers>=4.30.0",
    "trl>=0.7.0",
    "vllm>=0.4.0",
    "wandb>=0.15.0",
    # MineStudio from github
    "minestudio @ git+https://github.com/CraftJarvis/MineStudio.git",
]

[project.urls]
Homepage = "https://github.com/CraftJarvis/JarvisVLA"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = {find = {include = ["jarvisvla*"]}}
include-package-data = true
zip-safe = false

[tool.uv]
dev-dependencies = []
